[package]
authors = ["Bengt Marten Agren <marangisto@me.com>"]
edition = "2018"
readme = "README.md"
name = "blink-sam3x8e"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.5"
panic-halt = "0.2.0"
sam3x8e = { path = "../sam3x8e" }

# this lets you use `cargo fix`!
[[bin]]
name = "blink-sam3x8e"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
